[gd_scene load_steps=45 format=2]

[ext_resource path="res://scripts/entity/player1.gd" type="Script" id=2]
[ext_resource path="res://sprites/Player_a_shoot.png" type="Texture" id=3]
[ext_resource path="res://sprites/health_bar_logo.png" type="Texture" id=4]
[ext_resource path="res://other/color_swap.tres" type="Material" id=5]
[ext_resource path="res://sprites/block.png" type="Texture" id=6]
[ext_resource path="res://other/kongtext.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/player_2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.70932, 3.95521 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerAShoot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "down_sh"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerAShoot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "fall"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=17]
resource_name = "idle_down_sh"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerAShoot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "idle_left_sh"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "idle_right_sh"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=20]
resource_name = "idle_up_sh"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerAShoot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=21]
resource_name = "left_sh"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerAShoot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 11, 10, 11 ]
}

[sub_resource type="Animation" id=13]
resource_name = "on_wall"
length = 0.1
loop = true

[sub_resource type="Animation" id=22]
resource_name = "right_sh"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerAShoot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 6, 7, 6 ]
}

[sub_resource type="Animation" id=16]
resource_name = "up_sh"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerAShoot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 5, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fall"
length = 100.0

[sub_resource type="Animation" id=11]
resource_name = "jump"
length = 10.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.65625 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "land"

[sub_resource type="Gradient" id=38]
colors = PoolColorArray( 0, 0, 0, 1, 0.722656, 0.722656, 0.722656, 0 )

[sub_resource type="GradientTexture" id=53]
gradient = SubResource( 38 )

[sub_resource type="ParticlesMaterial" id=37]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 20.29
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.09
scale_random = 0.2
color_ramp = SubResource( 53 )

[sub_resource type="Animation" id=43]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../fade_out:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../fade_out:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../fade_out:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=45]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../fade_out:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=44]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../fade_out:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=46]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 1, 0.980392, 0.301961, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.980392, 0.301961, 1 )

[sub_resource type="Theme" id=47]

[sub_resource type="StyleBoxFlat" id=48]
bg_color = Color( 0.2, 0.235294, 0.513726, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=49]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.2, 0.235294, 0.513726, 1 )

[sub_resource type="Theme" id=50]

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0.2, 0.235294, 0.513726, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.2, 0.235294, 0.513726, 1 )

[sub_resource type="CircleShape2D" id=54]
radius = 44.0454

[sub_resource type="Animation" id=55]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 44.0454 ]
}

[sub_resource type="Animation" id=56]
resource_name = "anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 0.466516, 0.241484, 0.482967 ),
"update": 0,
"values": [ 44.0454, 38.0, 44.0 ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Player", "player"]]
collision_layer = 4
collision_mask = 258
script = ExtResource( 2 )
acceleration = 20
export_deceleration = 22
export_max_speed = 100
jump_slowing_down = 0
jump_height = 40.0
jump_time_to_peak = 0.3
jump_time_to_descent = 0.25
lowfallMultiplier = 75
maxfallspeed = 500
slower_fall_mult = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Player" type="Sprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 0, -3 )
texture = ExtResource( 8 )
flip_h = true
hframes = 7
vframes = 6

[node name="PlayerAShoot" type="Sprite" parent="."]
visible = false
material = ExtResource( 5 )
texture = ExtResource( 3 )
hframes = 6
vframes = 6
frame = 1

[node name="Coyote timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="jumpBuffer" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 257

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.9
anims/RESET = SubResource( 2 )
anims/down_sh = SubResource( 15 )
anims/fall = SubResource( 14 )
anims/idle = SubResource( 3 )
anims/idle_down_sh = SubResource( 17 )
anims/idle_left_sh = SubResource( 18 )
anims/idle_right_sh = SubResource( 19 )
anims/idle_up_sh = SubResource( 20 )
anims/jump = SubResource( 7 )
anims/left_sh = SubResource( 21 )
anims/on_wall = SubResource( 13 )
anims/right_sh = SubResource( 22 )
anims/up_sh = SubResource( 16 )
anims/walk = SubResource( 4 )

[node name="Scale manager" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/fall = SubResource( 10 )
anims/jump = SubResource( 11 )
anims/land = SubResource( 12 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashDisableMove" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Position2D" type="Position2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.447059 )
material = ExtResource( 5 )
position = Vector2( 0, 4 )
emitting = false
amount = 10
lifetime = 0.7
randomness = 0.28
local_coords = false
process_material = SubResource( 37 )
texture = ExtResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -20 )
current = true

[node name="Screen_shake_time" type="Timer" parent="Camera"]
one_shot = true

[node name="fade" type="AnimationPlayer" parent="."]
root_node = NodePath("../Camera")
anims/RESET = SubResource( 43 )
anims/fade_in = SubResource( 45 )
anims/fade_out = SubResource( 44 )

[node name="fade_out" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0, 0, 0, 1 )
material = ExtResource( 5 )
margin_left = -172.0
margin_top = -129.0
margin_right = 174.0
margin_bottom = 74.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="platformer" type="RichTextLabel" parent="."]
modulate = Color( 1, 0.980392, 0.301961, 1 )
margin_left = -155.0
margin_top = -68.0
margin_right = -44.0
margin_bottom = -23.0
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/normal_font = SubResource( 46 )
text = "-100"

[node name="shooter" type="RichTextLabel" parent="."]
modulate = Color( 0.2, 0.235294, 0.513726, 1 )
margin_left = -155.0
margin_top = -68.0
margin_right = -44.0
margin_bottom = -23.0
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/normal_font = SubResource( 46 )
text = "-100"

[node name="puzzle" type="RichTextLabel" parent="."]
modulate = Color( 0.2, 0.235294, 0.513726, 1 )
margin_left = -155.0
margin_top = -68.0
margin_right = -44.0
margin_bottom = -23.0
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/normal_font = SubResource( 46 )
text = "-100"

[node name="Control" type="Control" parent="."]
margin_left = -164.0
margin_top = -104.0
margin_right = 158.0
margin_bottom = 75.9997
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="platformer" type="ProgressBar" parent="Control"]
margin_left = 33.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/fg = SubResource( 41 )
custom_styles/bg = SubResource( 42 )
max_value = 10.0
step = 1.0
value = 5.0
percent_visible = false

[node name="shooter" type="ProgressBar" parent="Control"]
margin_left = 33.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 20.0
mouse_filter = 2
theme = SubResource( 47 )
custom_styles/fg = SubResource( 48 )
custom_styles/bg = SubResource( 49 )
max_value = 10.0
step = 1.0
value = 5.0
percent_visible = false

[node name="puzzle" type="ProgressBar" parent="Control"]
margin_left = 33.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 20.0
mouse_filter = 2
theme = SubResource( 50 )
custom_styles/fg = SubResource( 51 )
custom_styles/bg = SubResource( 52 )
max_value = 10.0
step = 1.0
value = 5.0
percent_visible = false

[node name="TextureRect" type="TextureRect" parent="Control"]
material = ExtResource( 5 )
margin_left = 8.0
margin_top = -6.0
margin_right = 48.0
margin_bottom = 34.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="ScentTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="EnemyArea" type="StaticBody2D" parent="."]
collision_layer = 1024
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
shape = SubResource( 54 )
one_way_collision = true

[node name="col_anim" type="AnimationPlayer" parent="EnemyArea"]
anims/RESET = SubResource( 55 )
anims/anim = SubResource( 56 )

[connection signal="timeout" from="Camera/Screen_shake_time" to="." method="_on_Screen_shake_time_timeout"]
[connection signal="animation_finished" from="fade" to="." method="_on_fade_animation_finished"]
